--- a/src/main/js/react-app-1/package.json
+++ b/src/main/js/react-app-1/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://test-bae-server2.testdb:8080/",
   "eslintConfig": {
     "extends": "react-app"
   },
