--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bae</groupId>
-	<artifactId>raziel</artifactId>
+	<artifactId>raziel-web</artifactId>
 	
 	<!-- Output to jar format -->
 	<packaging>jar</packaging>
 	
 	<version>0.0.1-SNAPSHOT</version>
-	<name>raziel</name>
-	<description>Project raizel</description>
+	<name>raziel-web</name>
+	<description>Project raizel-web</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -60,61 +60,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 
-			<plugin>
-				<groupId>com.github.eirslett</groupId>
-				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.6</version>
-				<configuration>
-					<nodeVersion>v10.0.0</nodeVersion>
-					<npmVersion>6.1.0</npmVersion>
-					<workingDirectory>src/main/js/react-app-1</workingDirectory>
-				</configuration>
-				<executions>
-					<execution>
-						<id>Install node and npm locally to the project</id>
-						<goals>
-							<goal>install-node-and-npm</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>npm install</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>Build frontend</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<configuration>
-							<arguments>run build</arguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>Copy frontend build to target</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${basedir}/target/classes/resources</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${basedir}/src/main/js/react-app-1/build</directory>
-									<filtering>true</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+
 
 		</plugins>
 		
