working on alter count reactjs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 #spring.datasource.url=jdbc:postgresql://localhost:26257/raziel?sslmode=disable
-spring.datasource.url=jdbc:postgresql://test-bae-t1.testdb:5433/raziel?sslmode=disable
-spring.datasource.username=yugabyte
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://test-bae-t1.testdb:5433/raziel?sslmode=disable
+#spring.datasource.username=yugabyte
+#spring.datasource.password=
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+
+spring.datasource.platform=h2
+spring.datasource.initialization-mode=always
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 
 console.mysql.user: bae
 console.mysql.password: bae
